# blog-system

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_main.py
app/: main.py
app/database/: schema.sql
app/docs/: erd.md
app/models/: post.py  user.py
app/routes/: posts.py  templates.py  users.py
app/services/: post_service.py  user_service.py
app/templates/: base.html  create_posts.html  edit_post.html  index.html  post.html
